--- a/package.json
+++ b/package.json
@@ -5,35 +5,44 @@
   "main": "src/app.js",
   "scripts": {
     "test": "mocha ./spec --compilers js:babel-core/register",
-    "dev": "webpack-dev-server",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "precommit": "npm test",
+    "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors",
+    "start": "node index.js",
+    "build": "webpack --config webpack.prod.config.js --progress --colors",
+    "postinstall": "webpack --config webpack.prod.config.js --progress --colors"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.15.3",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
-    "css-loader": "^0.27.3",
     "eslint": "^3.17.1",
     "eslint-plugin-jsx": "0.0.2",
     "eslint-plugin-react": "^6.10.0",
-    "redux-thunk": "^2.2.0",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "mocha": "^3.3.0",
+    "redux-logger": "^2.8.2",
+    "webpack": "^2.2.1",    
+    "webpack-dev-server": "^2.4.2"        
   },
   "dependencies": {
-    "compass": "^0.1.1",
+    "axios": "^0.15.3",
+    "bulma": "^0.4.0",
+    "express": "^4.15.2",
+    "font-awesome": "^4.7.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.6",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "redux-logger": "^2.8.2"
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3",
+    "webpack": "^2.2.1",
+    "css-loader": "^0.27.3",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8"        
   }
 }
