--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ./",
     "precommit": "npm test",
     "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors",
-    "start": "node index.js",
+    "start": "node ./index.js",
     "build": "webpack --config webpack.prod.config.js --progress --colors",
     "postinstall": "webpack --config webpack.prod.config.js --progress --colors"
   },
